2003-02-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-symbol.c: New file

	* src/sp-symbol.h: New file

	* src/enums.h: New file

	* src/xml/repr-io.c (sp_repr_svg_read_node): Return if entity declaration

	* src/sp-root.c (sp_root_init): Set correct default viewport values
	(sp_root_build): Read 'x', 'y', 'version', 'preserveAspectRatio'
	(sp_root_set): Parse added attributes, accept percentages for x, y, width, height
	(sp_root_update): Set up proper transformations to support aspect ratios

	* src/sp-item.h: Added viewPort and item2viewPort transformation to item context

	* src/document.c (sp_document_ensure_up_to_date): Set initial viewport
	and identity transforms in item context
	(sp_document_idle_handler): Ditto

	* src/attributes.h: Added 'version' and 'preserveAspectRatio'

2003-01-31  Masatake YAMATO  <jet@gyve.org>

	* src/main.c (POPT_TABLEEND): Define if it is not defined in
	popt.h. copied from forntline.

2003-01-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/guideline.c (sp_guideline_render): Do not round int

	* src/interface.c (sp_ui_close_view): Get widget pointer before killing object

2003-01-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.30pre

	* src/sp-image.c (sp_image_bbox): Calculate bbox properly

2003-01-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add intl, m4.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add intl/Makefile, po/Makefile.in, m4/Makefile.

2003-01-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/codepages.h: Win9x codepage declarations

	* src/main.c (WinMain): Use new toplevel toolbox constructor

	* src/text-context.c (sp_text_context_root_handler): Added Gdk_U to unimode

	* src/libnrtype/nr-type-w32.c: Implement ANSI charset and styles

	* src/libnrtype/nr-type-directory.c (nr_type_directory_build): Honour
	stretch attribute in searches

	* src/toolbox.c (sp_maintoolbox_create_toplevel): Broke constructor